// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`remove private books from array 1`] = `
Object {
  "books": Array [
    Object {
      "id": "1",
      "private": false,
    },
  ],
}
`;

exports[`replace private book to null 1`] = `
Object {
  "book1": Object {
    "id": "1",
    "private": false,
  },
  "book2": null,
  "notExistedBook": null,
}
`;

exports[`replace private books in array to null 1`] = `
Object {
  "nullableBooks": Array [
    Object {
      "id": "1",
      "private": false,
    },
    null,
    null,
  ],
}
`;

exports[`throw error with private book 1`] = `
Array [
  [GraphQLError: graphql-filter detected inconsistent data by throw mode. ],
]
`;
